hphp/test/slow/object/const/not_on_soft_late_init_prop.php.expectf
Fatal error: __Const properties may not also be __LateInit or __SoftLateInit in %s/not_on_soft_late_init_prop.php on line 4
